--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Restaurants</h1>
+  <h1>All Restaurants</h1>
   <div id="restaurant-container" class="grid"></div>
 
   <script>
